fixed gap

--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -14,7 +14,7 @@
 
 .faq-acordeon-wrap {
   display: flex;
-  gap: 24px;
+  /* gap: 24px; */
   padding-top: 20px;
   padding-bottom: 16px;
 }
